--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ruci"
 version = "0.1.0"
-authors = ["Justin Austin <jaust@seas.upenn.edu>"]
+authors = ["Justin Austin <justin@austin.ky>"]
 
 [dependencies]
 rand = "0.3"
